js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-block-script-code-valid.js
var
smoosh
;
function
smoosh
(
)
{
}
{
import
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
;
reportCompare
(
0
0
)
;
