js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-if-import-defer-no-rest-param.js
DONOTEVALUATE
(
)
;
if
(
true
)
{
import
.
defer
(
.
.
.
[
'
.
/
empty_FIXTURE
.
js
'
]
)
;
}
